Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


pkgcore 0.7.7.7: Jan 24th, 2011

* pkgcore resolver now understand weak blockers.  This fixes a long
  standing issue where portage/paludis would allow a transaction that
  pkgcore would refuse (at the time of pkgcore's creation, weak/strong
  didn't exist- just strong).

* work around eselect incompatibility for root not always being specified
  to `pinspect portageq get_repositories`.

* Better error reporting for mistakes in incremental vars in configuration.


pkgcore 0.7.7.6: Jan 16th, 2011

* fix bug where REQUIRED_USE wasn't being stored during metadata
  regeneration.  Thanks to marienz for reporting it.

* FEATURES=compressdebug support was added.  This enables splitdebug
  to compress the generate debug files; this can easily reduce the footprint
  from 20GB to ~8GB on an average system.

* no longer complain about incorrect profiles/categories files.  PMS,
  and people who hate QA suck.


pkgcore 0.7.7.5: Dec 26th, 2011

* pkgcore no longer requires a manifest to exist if the repository uses
  thin-manifests, and there are no distfiles for a pkg.

* removed support for FEATURES=allow-missing-checksums.  Use repository
  metadata/layout.conf use-manifest setting instead.

* complain about incorrect profiles/categories files.

* fix bug in masters handling where eclass lookup order was reversed.

* pinspect subcommand digests was added; this is used for scanning for
  broken manifest/digests in a repository.

* PORTAGE_LOGDIR is supported again.

* pkgcore no longer intermixes python/bash output incorrectly when stdout
  or stderr or the same fd: pmerge -Du @system &> log for example.

* issue #7; add framework for parallelized trigger execution.  Currently
  only splitdebug/stripping uses it, but it has a sizable gain for pkgs
  with many binaries.

* pmaint regen --disable-eclass-preloading is now
  pmaint regen --disable-eclass-caching.
