@@ -4,6 +4,10 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+* Fix bug where use dep forced changes to use state weren't honored
+  at the build level.
+
+
 pkgcore 0.7.7.7: Jan 24th, 2011
 
 * pkgcore resolver now understand weak blockers.  This fixes a long
